--- a/android/Notify/app/src/main/AndroidManifest.xml
+++ b/android/Notify/app/src/main/AndroidManifest.xml
@@ -36,6 +36,13 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
+
+        <service
+            android:name=".NotifyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
