--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "main": "./server.js",
   "dependencies": {
     "express": "^4.14.0",
+    "firebase-admin": "^4.0.3",
     "restler": "^3.4.0"
   },
   "devDependencies": {},
