--- a/android/Notify/app/build.gradle
+++ b/android/Notify/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.kevinbedi.notify.notify"
+        applicationId "com.kevinbedi.notify"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
