--- a/android/Notify/app/src/main/AndroidManifest.xml
+++ b/android/Notify/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kevinbedi.notify.notify" >
+    package="com.kevinbedi.notify" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -10,8 +10,8 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <permission android:protectionLevel="signature"
-        android:name="com.kevinbedi.notify.notify.permission.C2D_MESSAGE" />
-    <uses-permission android:name="com.kevinbedi.notify.notify.permission.C2D_MESSAGE" />
+        android:name="com.kevinbedi.notifypermission.C2D_MESSAGE" />
+    <uses-permission android:name="com.kevinbedi.notify.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="false"
