--- a/android/Notify/app/src/main/AndroidManifest.xml
+++ b/android/Notify/app/src/main/AndroidManifest.xml
@@ -9,16 +9,24 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <permission android:protectionLevel="signature"
-        android:name="com.kevinbedi.notifypermission.C2D_MESSAGE" />
-    <uses-permission android:name="com.kevinbedi.notify.permission.C2D_MESSAGE" />
-
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+
+
+        <receiver
+            android:name="com.kevinbedi.notify.NotificationReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </receiver>
+
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
