--- a/android/Notify/app/build.gradle
+++ b/android/Notify/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 4
         versionName "1.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        archivesBaseName = "Notify-v$versionName"
     }
     buildTypes {
         release {
