--- a/android/Notify/app/build.gradle
+++ b/android/Notify/app/build.gradle
@@ -14,7 +14,8 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            useProguard = true
+            proguardFiles.add(file('proguard-rules.pro'))
         }
     }
 }
